--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,8 @@ h1, h2, h3, h4, h5, h6 {
 #haut {
   width:100%;
   height:100vh;
-  # background:url(../img/call-to-action-bg.jpg) top center;
-  background: #000;
+  background:url(../img/big-data-analytics.jpg) top center;
+  #background: #000;
   background-size:cover;
   position:relative;
 }
