--- a/css/style.css
+++ b/css/style.css
@@ -1071,14 +1071,32 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background:#343b40;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   padding:30px 0;
   color:#fff;
   font-size:14px;
+  height:92px;
+  transition:all 0.5s;
+  z-index:997;
 }
 
-#footer .copyright {
+#footer.footer-fixed {
+  background:rgba(52, 59, 64, 0.9);
+  padding:22px 0;
+  height:77px;
+  transition:all 0.5s;
+}
+
+#footer .left {
+  text-align:left;
+}
+#footer .center {
   text-align:center;
+}
+#footer .right {
+  text-align:right;
 }
 
 #footer .credits {
